[tool.poetry]
name = "senorge-downloader"
version = "0.1.0"
description = ""
authors = ["Jari Bakken <jari@vg.no>"]
readme = "README.md"
packages = [{include = "senorge_downloader"}]

[tool.poetry.scripts]
senorge = "senorge_downloader.cli:main"

[tool.poetry.dependencies]
python = "^3.11"
appnope = "0.1.3"
asttokens = "2.2.1"
attrs = "23.1.0"
backcall = "0.2.0"
black = "23.1.0"
certifi = "2023.5.7"
cftime = "1.6.2"
click = "8.1.3"
click-plugins = "1.1.1"
cligj = "0.7.2"
comm = "0.1.3"
contourpy = "1.0.7"
cycler = "0.11.0"
debugpy = "1.6.7"
decorator = "5.1.1"
executing = "1.2.0"
fiona = "1.9.3"
fonttools = "4.39.4"
geopandas = "0.13.0"
ipykernel = "6.23.0"
ipython = "8.13.2"
jedi = "0.18.2"
jupyter-client = "8.2.0"
jupyter-core = "5.3.0"
kiwisolver = "1.4.4"
matplotlib = "3.7.1"
matplotlib-inline = "0.1.6"
munch = "2.5.0"
mypy-extensions = "1.0.0"
nest-asyncio = "1.5.6"
netcdf4 = "1.6.3"
numpy = "1.24.2"
packaging = "23.0"
pandas = "1.5.3"
parso = "0.8.3"
pathspec = "0.11.1"
pexpect = "4.8.0"
pickleshare = "0.7.5"
pillow = "9.5.0"
plac = "1.3.5"
platformdirs = "3.1.1"
prompt-toolkit = "3.0.38"
psutil = "5.9.5"
ptyprocess = "0.7.0"
pure-eval = "0.2.2"
pygments = "2.15.1"
pyparsing = "3.0.9"
pyproj = "3.5.0"
python-dateutil = "2.8.2"
pytz = "2022.7.1"
pyzmq = "25.0.2"
shapely = "2.0.1"
six = "1.16.0"
sqlalchemy = "2.0.7"
stack-data = "0.6.2"
tornado = "6.4.2"
tqdm = "4.65.0"
traitlets = "5.9.0"
typing-extensions = "4.5.0"
wcwidth = "0.2.6"
xarray = "2023.3.0"
flox = "^0.7.2"
dask = {extras = ["diagnostics"], version = "^2023.5.0"}
jinja2 = "^3.1.2"
requests = "^2.31.0"
s3fs = "^2023.5.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
